<resources>
    <string name="app_name">InventoryApp</string>
    <string name="sale">Sale</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a new product type</string>
    <!-- Title for the activity to edit existing product type [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit product</string>

    <!-- Label for editor menu option to save peoduct and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for name category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>
    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>
    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>
    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>
    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>
    <string name="default_quantity_value">0</string>
    <string name="increase_button">Increase</string>
    <string name="decrease_button">Decrease</string>
    <string name="import_picture_button">Import picture</string>
    <string name="order_button">Order more</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="sale_complete">successful deal</string>
    <string name="sale_deny">Sorry, the product is sold out</string>

    <string name="edit_name_blank">product name is blank</string>
    <string name="edit_price_blank">product price is blank</string>
    <string name="edit_image_blank">product image is blank </string>

    <string name="ExtraSubject">New order for </string>

    <string name="editor_insert_product_failed">fail to insert</string>
    <string name="editor_insert_product_successful">insert successfully</string>
    <string name="editor_update_product_failed">update fail</string>
    <string name="editor_update_product_successful">update successfully</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
</resources>
